pxc/tests/test_25_slice/const12.px

namespace const12;
import common -;

function void test1()
{
  vector{int} f;
  f.resize(10, int());
  f[3] = 99;
  slice{int} s = f[0..5];
  cslice{int} mutable& cs = s; // error
  println(cs[3]);
}

test1();

